Fixed the margin-bottom causing weird spacing due to text font size

--- a/Scrimba Projects/The Front-End Developer Career Path/Essential CSS Concepts/CSS Fundementals Challenges/index.css
+++ b/Scrimba Projects/The Front-End Developer Career Path/Essential CSS Concepts/CSS Fundementals Challenges/index.css
@@ -31,15 +31,22 @@ h2 {
 
 h1 {
     font-size: 60px;
+    margin-top: 0;
 }
 
 h2 {
     font-size: 42px;
+    margin-top: 0;
 }
 
 h3 {
     font-size: 36px;
     font-weight: 900;
+    margin-bottom: 0;
+}
+
+p {
+    margin-bottom: 0;
 }
 
 a {
@@ -54,6 +61,7 @@ a:focus {
 
 .small-text {
     font-size: 16px;
+    margin-top: 5px;
 } 
 
 header,
@@ -61,7 +69,7 @@ section {
     padding: 100px 0;
 }
 
-.header-footer-background {
-    background-color: #252525;
-    color: #FFF;
+.inverse {
+    color: #fff;
+    background: #252525;
 }
